crates/plotnik-lib/tests/02-parser/recovery_incomplete/missing_capture_name.txt
(identifier) @
==== diagnostics ====
error: expected a capture name after `@`
 --> query.ptk:1:14
  |
1 | (identifier) @
  |              ^
  |
help: captures attach to the pattern before them: `(node) @name`
